@@ -1,7 +1,11 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.463 2009-04-07 19:36:05 remko Exp $
+	$Id: ChangeLog,v 1.464 2009-04-08 18:46:30 guru Exp $
 -----------------------------------------------------------------------------------------
 
+2009-04-08	pwessel
+	* gmt_support.c:	The 3-D view -E option used in many programs (such as psxyz)
+				could not handle exponential notations.
+				
 2009-04-07	remko
 	* configure.ac:		Auto detect octave and/or matlab directories.
 				Do not say "yes" to compilation when supplement not available.
